--- a/index.html
+++ b/index.html
@@ -180,7 +180,39 @@
     <p class="setup-similar-label">Петр Петров</p>
   </div>
 </template>
+<script>
 
+  var fireballSize = 22;
+  
+  var getFireballSpeed = function(left) {
+    if(left) {
+      return 5;
+    } else {
+      return 2;
+    }
+  };
+
+  var wizardSpeed = 3;
+  var wizardWidth = 70;
+
+  var getWizardHeight = function(width) {
+      return 1.377 * width;
+
+ },
+
+  var getWizardX = function(width) {
+    return width / 3;
+
+ };
+
+  var getWizardY = function(height) {
+    return height - 100;
+
+ };
+
+
+
+</script>
 <script src="js/game.js"></script>
 
 </body>
