--- a/index.html
+++ b/index.html
@@ -196,17 +196,17 @@
   var wizardWidth = 70;
 
   var getWizardHeight = function(width) {
-      return 1.377 * width;
+      return 1.337 * width;
 
- },
+ };
 
   var getWizardX = function(width) {
-    return width / 3;
+    return width / 2;
 
  };
 
   var getWizardY = function(height) {
-    return height - 100;
+    return height / 3 * 2;
 
  };
 
