--- a/index.html
+++ b/index.html
@@ -201,12 +201,12 @@
  };
 
   var getWizardX = function(width) {
-    return width / 2;
+    return (width / 2) - wizardWidth;
 
  };
 
   var getWizardY = function(height) {
-    return height / 3 * 2;
+    return (height / 3 * 2) - wizardWidth;
 
  };
 
