--- a/index.html
+++ b/index.html
@@ -195,18 +195,18 @@
   var wizardSpeed = 3;
   var wizardWidth = 70;
 
-  var getWizardHeight = function(width) {
-      return 1.337 * width;
+  var getWizardHeight = function() {
+      return 1.337 * wizardWidth;
 
  };
 
   var getWizardX = function(width) {
-    return (width / 2) - wizardWidth;
+    return (width - wizardWidth) / 2;
 
  };
 
   var getWizardY = function(height) {
-    return (height / 3 * 2) - wizardWidth;
+    return (height - getWizardHeight()) / 3 * 2;
 
  };
 
