--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
  };
 
   var getWizardY = function(height) {
-    return (height - getWizardHeight()) / 3 * 2;
-
+    return (height - getWizardHeight()) / 3;
+    
  };
 
 
